--- a/academicWork.html
+++ b/academicWork.html
@@ -47,6 +47,7 @@
 			<p>My first real experience with coding was when I took an introduction to coding class during my sophomore year of high-school. In this class, we used a beginner friendly version of the coding language Python, known as Pyret. Using this coding language, I managed to learn how to make simple animations and games with justthe power of computer code.</p>
 		
 			<p>During this time, I also signed up to enroll in BOCES Seaway Technical Center in Norwood. This meant that during my Junior on Senior years of High School, I would spend half of my work day in a software development class, which is where I learned most of what I now know about coding websites and backend development.
+				<p>Additionally, I have had many years of helping and aiding other children and young adults in learning how to code, acting as somewhat of an assistant teacher for multiple years during my time as a high-schooler. I also have had multiple years of experience as a babysitter for multiple children.</p>
 </p>
 			
 			<p>For instance, this entire website is based off of the website designs that I had created during my time at BOCES.
@@ -65,6 +66,7 @@
 		
 			<p>During this time, I also signed up to enroll in BOCES Seaway Technical Center in Norwood. This meant that during my Junior on Senior years of High School, I would spend half of my work day in a software development class, which is where I learned most of what I now know about coding websites and backend development.
 </p>
+			<p>Additionally, I have had many years of helping and aiding other children and young adults in learning how to code, acting as somewhat of an assistant teacher for multiple years during my time as a high-schooler. I also have had multiple years of experience as a babysitter for multiple children.</p>
 			
 			<p>For instance, this entire website is based off of the website designs that I had created during my time at BOCES.
 </p>
